fix CSS magic height numbers for list containers (#1184)
The lexiconItemListContainer and compactEntryListContainer both contained non-optimal magic height numbers.

The new numbers provide a more consistent maximum height as well as no app surface scrollbar.

The only case where a scrollbar appears is when the search options dialog is exercised, and this is too complicated to fix without a more major CSS/HTML reshuffle.

Also remove line in FitTextDirective that fiddles with the compactListItemContainer height.  It should not.

--- a/src/angular-app/languageforge/lexicon/editor/_editor.scss
+++ b/src/angular-app/languageforge/lexicon/editor/_editor.scss
@@ -293,11 +293,14 @@ dc-entry .card {
         }
     }
     .lexiconItemListContainer {
-      margin-bottom: 15px;
       @include media-breakpoint-up(sm) {
-        height: calc(100vh - 568px);
-        overflow: auto;
-        }
+        margin-bottom: 5px;
+        height: calc(100vh - 310px);
+      }
+      @include media-breakpoint-down(sm) {
+        height: calc(100vh - 260px);
+      }
+      overflow: auto;
     }
     .lexiconListItem.active {
         cursor: default;
@@ -317,8 +320,8 @@ dc-entry .card {
 }
 
 #lexAppEditView {
-  .lexiconItemListContainer {
-    height: calc(100vh - 568px);
+  #compactEntryListContainer {
+    height: calc(100vh - 400px);
     overflow: auto;
   }
   .word-definition-title {
